Man oh man, finishing message callback functions and setting up debut messenger struct

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.26)
-project(directx_11)
+project(vukan-renderer)
 
 set(CMAKE_CXX_STANDARD 17)
 
@@ -12,10 +12,10 @@ include_directories(C:/VulkanSDK/1.4.309.0/Include)
 link_directories(libraries/GLFW/lib)
 link_directories(C:/VulkanSDK/1.4.309.0/Lib)
 
-add_executable(directx_11 src/main.cpp)
+add_executable(vukan-renderer src/main.cpp)
 
-target_link_libraries(directx_11 libglfw3dll.a)
-target_link_libraries(directx_11 vulkan-1.lib)
-target_link_libraries(directx_11 user32.lib)
-target_link_libraries(directx_11 gdi32.lib)
-target_link_libraries(directx_11 shell32.lib)
+target_link_libraries(vukan-renderer libglfw3dll.a)
+target_link_libraries(vukan-renderer vulkan-1.lib)
+target_link_libraries(vukan-renderer user32.lib)
+target_link_libraries(vukan-renderer gdi32.lib)
+target_link_libraries(vukan-renderer shell32.lib)
