--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,6 +7,7 @@ include_directories(includes)
 
 include_directories(libraries/glm)
 include_directories(libraries/GLFW/include)
+include_directories(shaders)
 include_directories(C:/VulkanSDK/1.4.309.0/Include)
 
 link_directories(libraries/GLFW/lib)
